--- a/index.html
+++ b/index.html
@@ -1,41 +1,65 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <title>Frontend Mentor | Stats preview card component</title>
+  </head>
 
-  <title>Frontend Mentor | Stats preview card component</title>
-</head>
+  <body>
+    <div class="card-presentation">
+      <div class="box box-1">
+        <header>
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+        </header>
 
-<body>
-  <div class="card-presentation">
-    <div class="box-1">
-      <header>
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-      </header>
+        <div class="content">
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+        </div>
 
-      <div class="content">
-        Discover the benefits of data analytics and make better decisions
-        regarding revenue, customer experience, and overall efficiency.
+        <div class="statdistics">
+          <div class="s-box s-box-1">
+            <div class="title-stats-1 title-statdistics">10k+</div>
+            <div class="content-stat-1 content-statdistics">companies</div>
+          </div>
+          <div class="s-box s-box-2">
+            <div class="title-stats-2 title-statdistics">314</div>
+            <div class="content-stat-2 content-statdistics">templates</div>
+          </div>
+          <div class="s-box s-box-3">
+            <div class="title-stats-3 title-statdistics">12m+</div>
+            <div class="content-stat-3 content-statdistics">queries</div>
+          </div>
+        </div>
+
+        <div class="attribution">
+          <p>
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. Coded by
+            <a href="https://github.com/9Galaxy/Presentation-Card"
+              >Mariano Guerrero (9Galaxy)</a
+            >.
+          </p>
+        </div>
       </div>
 
-      <div class="statdistics">10k+ companies 314 templates 12m+ queries</div>
-
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-        <a href="https://github.com/9Galaxy/Presentation-Card">Mariano Guerrero (9Galaxy)</a>.
-      </div>
+      <div class="box box-2"></div>
     </div>
-
-    <div class="box-2">
-      <img src="images/image-header-desktop.jpg" alt="A office with a team of workers" />
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
